# map-ascii

./: .gitignore  AGENTS.md  LICENSE  README.md  continent.go  go.mod  main.py  mapascii.go  pyproject.toml  spec.md
cmd/map-asci/: main.go
cmd/map-ascii/: main.go
go/: README.md  go.mod
go/cmd/map-asci/: main.go
go/internal/mapasci/: mask.go
internal/: animation.go  render.go
src/map_asci/: __init__.py  cli.py  generate_mask.py  mask.py  render.py
